Use DOM for results

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="rock">Rock</button>
-    <button id="paper">Paper</button>
-    <button id="scissors">Scissors</button>
+    <div class="results-container">
+        <p id="result"></p>
+    </div>
+    <button id="rock" data-choice="Rock">Rock</button>
+    <button id="paper" data-choice="Paper"="">Paper</button>
+    <button id="scissors" data-choice="Scissors"="">Scissors</button>
 </body>
 </html>
